Added logic to starter_code.ipynb file.

--- a/deep learning/Starter_Code.ipynb
+++ b/deep learning/Starter_Code.ipynb
@@ -474,7 +474,10 @@
    ],
    "source": [
     "# Look at APPLICATION_TYPE value counts for binning\n",
-    "#  YOUR CODE GOES HERE"
+    "application_type_counts = cleaned_application_df['APPLICATION_TYPE'].value_counts()\n",
+    "\n",
+    "# Print the value counts\n",
+    "print(application_type_counts)"
    ]
   },
   {
@@ -505,14 +508,18 @@
    "source": [
     "# Choose a cutoff value and create a list of application types to be replaced\n",
     "# use the variable name `application_types_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
+    "application_type_counts = cleaned_application_df['APPLICATION_TYPE'].value_counts()\n",
+    "\n",
+    "# Choose a cutoff value (you can adjust this threshold)\n",
+    "cutoff_value = 3\n",
+    "\n",
     "\n",
     "# Replace in dataframe\n",
-    "for app in application_types_to_replace:\n",
-    "    application_df['APPLICATION_TYPE'] = application_df['APPLICATION_TYPE'].replace(app,\"Other\")\n",
+    "for app in application_type_counts:\n",
+    "    application_df['APPLICATION_TYPE'] = cleaned_application_df['APPLICATION_TYPE'].replace(app,\"Other\")\n",
     "\n",
     "# Check to make sure binning was successful\n",
-    "application_df['APPLICATION_TYPE'].value_counts()"
+    "cleaned_application_df['APPLICATION_TYPE'].value_counts()"
    ]
   },
   {
@@ -544,7 +551,7 @@
    ],
    "source": [
     "# Look at CLASSIFICATION value counts for binning\n",
-    "classification_counts = application_df['CLASSIFICATION'].value_counts()\n",
+    "classification_counts = cleaned_application_df['CLASSIFICATION'].value_counts()\n",
     "\n",
     "# Print the value counts\n",
     "print(classification_counts)"
@@ -613,7 +620,8 @@
    ],
    "source": [
     "# You may find it helpful to look at CLASSIFICATION value counts >1\n",
-    "#  YOUR CODE GOES HERE"
+    "classification_value_greater_than_1 = classification_counts[classification_counts > 1]\n",
+    "print(classification_value_greater_than_1)"
    ]
   },
   {
@@ -641,7 +649,7 @@
    "source": [
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
+    "classifications_to_replace = cleaned_application_df['CLASSIFICATION'].value_counts()\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
@@ -658,7 +666,10 @@
    "outputs": [],
    "source": [
     "# Convert categorical data to numeric with `pd.get_dummies`\n",
-    "#  YOUR CODE GOES HERE"
+    "dummy_data = pd.get_dummies(application_df)\n",
+    "\n",
+    "# Print the updated DataFrame\n",
+    "print(cleaned_application_df.head())"
    ]
   },
   {
@@ -668,10 +679,20 @@
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "#  YOUR CODE GOES HERE\n",
+    "X = application_df.drop(columns=['TARGET_COLUMN_NAME'])\n",
+    "\n",
+    "# Target (y) is the target column\n",
+    "y = application_df['TARGET_COLUMN_NAME']\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
-    "#  YOUR CODE GOES HERE"
+    "# Split the data into a training set (70%) and a testing set (30%)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Print the shapes of the resulting datasets\n",
+    "print(\"X_train shape:\", X_train.shape)\n",
+    "print(\"X_test shape:\", X_test.shape)\n",
+    "print(\"y_train shape:\", y_train.shape)\n",
+    "print(\"y_test shape:\", y_test.shape)"
    ]
   },
   {
